--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - $GOPATH/pkg/mod
 install: true
-script: GO111MODULE=on make build
+script: GO111MODULE=on make test build
 deploy:
   skip_cleanup: true
   provider: script
