--- a/buildpack.toml
+++ b/buildpack.toml
@@ -15,7 +15,7 @@
 [buildpack]
 id = "io.projectriff.command"
 name = "Command Function Buildpack"
-version = "0.0.9"
+version = "0.0.10-BUILD-SNAPSHOT"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
