--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+.DS_Store
 .idea/
+.vscode/
+artifactory/
 bin/
 dependency-cache/
-.DS_Store
-artifactory/
-.vscode/
+packaged-cnb/
+scratch/
