--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,4 +41,4 @@ jobs:
     - name: Build release
       run: make build
     - name: Publish artifacts
-      run: .github/workflows/publish.sh
+      run: .github/workflows/publish.sh ${{ github.ref }}
