--- a/buildpack.toml
+++ b/buildpack.toml
@@ -17,7 +17,7 @@ api = "0.2"
 [buildpack]
 id = "io.projectriff.command"
 name = "Command Function Buildpack"
-version = "0.1.0"
+version = "0.2.0-BUILD-SNAPSHOT"
 
 [[stacks]]
 id = "io.buildpacks.stacks.bionic"
